Change default Tomcat parameters.